[tool]
[tool.poetry]
name = "pyaestro"
version = "0.0.1a2"
description = "A package of utilities structures for building workflows and workflow related tools."
authors = ["Frank Di Natale <frank.dinatale1988@gmail.com>"]
maintainers = ["Frank Di Natale <frank.dinatale1988@gmail.com>"]
license = "MIT"
include = ["pyaestro/core/datastructures/_schemas/graph.json"]

[tool.poetry.dependencies]
python = ">=3.6"
coloredlogs = "*"
psutil = "^5.8.0"
jsonschema = "*"



[tool.poetry.dev-dependencies]
fabric = "*"
coverage = "*"
sphinx_rtd_theme = "*"
sphinx = "*"
flake8 = "*"
pydocstyle = "*"
pylint = "*"
tox = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
tox-travis = "*"
tox-pyenv = "*"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
