[tool]
[tool.poetry]
name = "pyaestro"
version = "0.0.1a2"
description = "A package of utilities structures for building workflows and workflow related tools."
authors = ["Frank Di Natale <frank.dinatale1988@gmail.com>"]
maintainers = ["Frank Di Natale <frank.dinatale1988@gmail.com>"]
license = "MIT"
include = ["pyaestro/core/datastructures/_schemas/graph.json"]

[tool.poetry.dependencies]
python = ">=3.7"
coloredlogs = "*"
psutil = "^5.8.0"
jsonschema = "*"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
fabric = "*"
coverage = "*"
flake8 = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
