[tool]
[tool.poetry]
name = "pyaestro"
version = "0.0.1a2"
description = "A package of utilities structures for building workflows and workflow related tools."
authors = ["Frank Di Natale <frank.dinatale1988@gmail.com>"]
maintainers = ["Frank Di Natale <frank.dinatale1988@gmail.com>"]
license = "MIT"

[tool.setuptools.package-data]
"abstract.scehmas" = ["pyaestro/abstracts/_schemas/*"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
coloredlogs = "^15.0.1"
psutil = "^5.8.0"
jsonschema = "^3.2.0"
typing-extensions = {version = "^4.2.0", python = "<=3.7"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
pydocstyle = "^6.1.1"
pytest = "^6.2.5"
pre-commit = "^2.15.0"
pytest-cov = "^2.12.1"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
